--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "phalcon/devtools": "dev-master",
+        "phalcon/devtools": "1.3.*@dev",
         "swiftmailer/swiftmailer": "^5.4"
     }
 }
