--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 #arquivos ignoradas pelo git
 apps/config/config.ini
 apps/public/img/users
+pluton.sublime-workspace
+pluton.sublime-project
+.settings
 
